create range capital

--- a/public/admin/assets/css/sleek.css
+++ b/public/admin/assets/css/sleek.css
@@ -3531,7 +3531,7 @@ input[type="button"].btn-block {
 .page-link {
   position: relative;
   display: block;
-  padding: 1rem 1.25rem;
+  /* padding: 1rem 1.25rem; */
   margin-left: -1px;
   line-height: 1.25;
   color: #4c84ff;
@@ -9445,7 +9445,8 @@ div.copied {
 /*===== PAGINATION =====*/
 .pagination .page-item:first-child .page-link,
 .pagination .page-item:last-child .page-link {
-  height: 51px; }
+  /* height: 51px;  */
+}
 
 .pagination .page-link {
   color: #8a909d; }
